<resources>
    <string name="app_name">CVBuilderApplication</string>
    <string name="win">Win Ei Khaing</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="summary">Summary</string>
    <string name="summary_body">Win Ei Khaing\nCurrently living in Bergenfield, NJ 07621\nOriginally from Myanmar</string>
    <string name="qualification">Qualification</string>
    <string name="qualification_body">Bachelor of Computer Science\n(Software Engineer)\nCurrently distance education for Master of Science in Computer Science</string>
    <string name="current_position">Current Position</string>
    <string name="current_position_body">Software Developer at VideoBank</string>
    <string name="about_me">About Me</string>
    <string name="about_me_body">Versatile software engineer with more than 4 years of experience designing, developing, testing, and maintaining a wide variety of software solutions. Familiar with all phases of the Software Development Life Cycle for both front-end and back-end components, including requirement gathering, coding, implementation, testing, and maintenance. Expertise includes languages and tools like C#, Java, .NET Framework, Spring Framework, MS SQL, Visual Studio, and Git.</string>
    <string name="education">Education</string>
    <string name="ucsm_name">University of Computer Studies, Mandalay(Myanmar)</string>
    <string name="bachelors_of_science_in_computer_science">Bachelors of Science in Computer Science</string>
    <string name="master_of_science_in_computer_science">Master of Science in Computer Science</string>
    <string name="maharishi_international_university">Maharishi International University</string>
    <string name="ip">IP: Information Technology Passport</string>
    <string name="fe">FE: Fundamental Information Technology Engineer</string>
    <string name="diploma_in_english">Diploma in English</string>
    <string name="work_experience"><b>Languages</b>:  C#, Java\n<b>Web</b>:  HTML5, CSS3, JavaScript, Bootstrap, React\n<b>Web Services</b>:  REST API\n<b>Window Services</b>:  WCF\n<b>Web/App Servers</b>:  IIS, Tomcat\n<b>Frameworks</b>:  Kendo, .NET, .NET Core, Spring, Spring Boot, Entity Framework, Hibernate\n<b>Databases</b>:  MS SQL, MySQL\n<b>Design Patterns</b>:  MVC, Singleton, Observer, Strategy, Template, Chain of Responsibility, Proxy, Factory, Adapter, Multi-Threading, Façade\n<b>SDLC</b>:  Agile-Scrum, Waterfall\n<b>Tools</b>:  Visual Studio, Visual Studio Code, Eclipse, IntelliJ IDEA, Trello, SVN, Git, TFS, Postman, StarUML\n<b>Platforms</b>:  Windows, Mac OS</string>
    <string name="specialized_area">Specialized Area</string>
    <string name="areas">• Software Development Life Cycle \n• System Design \n• C# and Java Programming \n• Database Development \n• Requirement Gathering \n• Testing and Troubleshooting \n• Documentation \n• RFID Integration</string>
    <string name="part_time">Part Time Job</string>
    <string name="certification">Certification</string>
    <string name="freelance">Freelance</string>
    <string name="freelance_position">Programmer</string>
    <string name="freelance_period">2017_2018</string>
    <string name="grape_city">Grape City</string>
    <string name="grape_city_position">C# Developer</string>
    <string name="grape_city_period">2018_2019</string>
    <string name="video_bank">VideoBank</string>
    <string name="video_bank_position">Software Developer</string>
    <string name="video_bank_period">June 2022_present</string>
    <string name="e_tag">ETag RFID</string>
    <string name="e_tag_position">Software Engineer</string>
    <string name="e_tag_period">May 2019_July 2021</string>
    <string name="unique_comm">Unique Comm</string>
    <string name="unique_comm_position">Junior .Net Developer</string>
    <string name="unique_comm_period">December 2018_April 2019</string>
    <string name="work_experience_label">Work Experience</string>
    <string name="my_contact">Contact</string>
    <string name="github">GitHub</string>
    <string name="win_ei_khaing">Win-Ei-Khaing</string>
    <string name="linkedin">LinkedIn</string>
    <string name="email">Email</string>
    <string name="job_search_email">khai.winei@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="_6418191641">641-819-1641</string>
    <string name="my_phone">tel:6418191641</string>
    <string name="my_twitter">https://twitter.com/WinEiKhaing1</string>
    <string name="my_linkedin">https://www.linkedin.com/in/win-ei-khaing/</string>
    <string name="my_github">https://github.com/Win-Ei-Khaing</string>
    <string name="email_subject">Testing from CV Builder Application</string>
    <string name="email_body">Hello. This is from CV Builder Application</string>

    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="saved_theme">theme</string>
    <string name="home_menu">Home</string>
    <string name="about_me_menu">About Me</string>
    <string name="work_menu">Work Experience</string>
    <string name="contact_menu">Contact</string>
    <string name="something_went_wrong">Something went wrong.</string>

    <string name="intent_filter">mailto:</string>
    <string name="intent_key">web</string>
    <string name="linked_in_title">LinkedIn</string>
    <string name="twitter_in_title">Twitter</string>
    <string name="github_in_title">GitHub</string>
    <string name="setting">Setting</string>
    <string name="add">add</string>
    <string name="logout">Logout</string>

    <string name="login_email">Enter email</string>
    <string name="login_password">Enter password</string>
    <string name="login_email_hint"></string>
    <string name="login_password_hint"></string>

    <string name="dialog_base_url_auto_hint_url">Url</string>
    <string name="login_email_key">email</string>
    <string name="login_password_key">password</string>
</resources>