<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/wincolor"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_experience_label" />

    <LinearLayout
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/horizontal_20"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="Company Name"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_dialog_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/horizontal_20"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:cursorVisible="true"
            android:gravity="center|start|bottom"
            android:inputType="textEmailAddress"
            android:textColor="@color/black_effective"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/horizontal_20"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="Position"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_dialog_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/horizontal_20"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:cursorVisible="true"
            android:gravity="center|start|bottom"
            android:inputType="textEmailAddress"
            android:textColor="@color/black_effective"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/horizontal_20"
            android:text="Period"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_dialog_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:cursorVisible="true"
            android:gravity="center|start|bottom"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:minHeight="48dp"
            android:textColor="@color/black_effective"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:gravity="end"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:id="@+id/btn_add"
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>